# yourhq

./: .dockerignore  .env.example  .env.hosted.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING-SOURCES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md  TESTING_FINDINGS.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  update.sh
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  template_contribution.yml
.github/workflows/: ci-main.yml  ci.yml  codeql.yml  deploy-hosted.yml  docker-publish.yml  docs.yml  e2b-template.yml  e2e.yml  gitleaks.yml  update-llms-full.yml
apps/migrate/: package-lock.json  package.json
apps/ui/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  next.config.ts  (+10 more)
docs/: AGENTS.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  FAQ.md  FEATURES.md  HEARTBEAT.md  INSTALL.md  NETWORKING.md  README.md  ROADMAP.md  SCHEMA.md  TROUBLESHOOTING.md
docs-site/: README.md  docs.json  index.mdx  llms-full.txt  llms.txt
e2e/: .env.example  .gitignore  BUGS.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
gateway/: Dockerfile  Dockerfile.e2b  build-template.mjs  e2b-xl.toml  e2b.toml  entrypoint.sh  files_api.py  requirements.txt
installer/: install-gateway.sh  install.sh
scripts/: build-source-manifests.mjs  dev.sh  diagnostic-bundle.sh  release.sh
templates/: README.md
(+1336 files in other folders)
