[project]
name = "yourhq-gateway"
version = "0.2.2"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8",
  "websocket-client>=1.6",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["gateway/tests"]
pythonpath = ["gateway", "gateway/daemons", "gateway/connectors", "gateway/embedder"]
markers = ["integration: requires external services"]

[tool.coverage.run]
source = ["gateway"]
omit = ["gateway/tests/*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"templates/*/scripts/hq_session_bootstrap.py" = ["E402"]
